--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     </section>
 
-    <!--To display-->
+    <!--To display transactions-->
     <section id="transactions">
         <fieldset>
             <h2 class="poiret-one-regular">Transactions</h2>
@@ -130,6 +130,7 @@
                 <p>Total Income: <span id="total-income">0</span></p>
                 <p>Total Expense: <span id="total-expense">0</span></p>
                 <p>Balance: <span id="total-balance">0</span></p>
+                <button id="export-button">Export Transactions</button>
         </fieldset>
     </section>
 
