--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
                             <option value="Food">Food</option>
                             <option value="Entertainment">Entertainment</option>
                             <option value="Transportation">Transportation</option>
-                            <option value="Other">Other</option>
                             <option value="custom">Custom</option>
                     </select>
                     <span class="error" id="category-error"></span>
@@ -95,31 +94,31 @@
                     </select>
             </section>
 
-            <table>
-                <thead>
-                    <tr>
-                        <th>
-                            Description
-                        </th>
-                        <th>
-                            Amount
-                        </th>
-                        <th>
-                            Category
-                        </th>
-                        <th>
-                            Date
-                        </th>
-                        <th>
-                            Actions
-                        </th>
-                    </tr>
-                </thead>
-
-                <tbody id="transactions-body">
-
-                </tbody>
-            </table>
+            <div class="table-wrapper">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>
+                                Description
+                            </th>
+                            <th>
+                                Amount
+                            </th>
+                            <th>
+                                Category
+                            </th>
+                            <th>
+                                Date
+                            </th>
+                            <th>
+                                Actions
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody id="transactions-body">
+                    </tbody>
+                </table>
+            </div>
         </fieldset>
     </section>
 
