--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>
 
     <!--Form section of the page to get input from the user -  date, sdescription, category, and samount-->
-    <section id="form">
+    <section id="form" class="card">
         <form id="expense-income-form">
             <fieldset>
                 <!--Description-->
@@ -44,6 +44,7 @@
                     <select name="category" id="category">
                             <option disabled selected>Select Category</option>
                             <option value="Food">Food</option>
+                            <option value="Shopping">Shopping</option>
                             <option value="Entertainment">Entertainment</option>
                             <option value="Transportation">Transportation</option>
                             <option value="custom">Custom</option>
@@ -64,24 +65,31 @@
                 <br />
 
                 <!--Income/Expense-->
-                <label for="type">Select Type:</label>
-                <input type="radio" id="income" name="type" value="income">
-                <label for="income">Income</label>
+                <label>Select Type:</label>
 
-                <input type="radio" id="expense" name="type" value="expense">
-                <label for="expense">Expense</label>
+                <div class="radio-group">
+                    <label class="radio-option">
+                        <input type="radio" id="income" name="type" value="income">
+                        Income
+                    </label>
+
+                    <label class="radio-option">
+                        <input type="radio" id="expense" name="type" value="expense">
+                        Expense
+                    </label>
+                </div>
 
                 <span class="error" id="type-error"></span>
                 <br />
 
-                <button type="submit" disabled>Add Expense</button>
+                <button type="submit" class="submit-button" disabled>Add Expense</button>
             </fieldset>
         </form>
 
     </section>
 
     <!--To display transactions-->
-    <section id="transactions">
+    <section id="transactions" class="card">
         <fieldset>
             <h2 class="poiret-one-regular">Transactions</h2>
 
@@ -123,7 +131,7 @@
     </section>
 
     <!--Display Summary-->
-    <section id="summary">
+    <section id="summary" class="card">
         <fieldset>
             <h2 class="poiret-one-regular">Summary</h2>
                 <p>Total Income: <span id="total-income">0</span></p>
@@ -135,7 +143,7 @@
     </section>
 
     <!--Canvas for expense pie chart-->
-    <section>
+    <section class="card">
         <fieldset>
             <h2 class="poiret-one-regular">Expense Pie Chart</h2>
             <canvas id="expense-pie-chart" width="100" height="100"></canvas>
